[tool.poetry]
name = "dash-treeview-antd"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
dash = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
